--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: xhris54 Blogs # the main title
 
 tagline: A text-focused Jekyll theme # it will display as the subtitle
 
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:https://profiles.bugcrowdusercontent.com/avatars/813a742cd6cc05fdaa924c9b45ba588b/8_orgid_27451b99-e225-47ea-835b-8ca33a236156.jpeg
+avatar: "https://profiles.bugcrowdusercontent.com/avatars/813a742cd6cc05fdaa924c9b45ba588b/8_orgid_27451b99-e225-47ea-835b-8ca33a236156.jpeg"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
