--- a/_config.yml
+++ b/_config.yml
@@ -14,32 +14,32 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: xhris54 Blogs # the main title
+title:  Xhris54 Blogs # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: LEARN HACK REPEAT # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  A blog about my journey in the world of cybersecurity, sharing knowledge, experiences, and insights on ethical hacking, bug bounty hunting, and more.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://xhris54.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: xhris54 # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: krishnast54 # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: xhris54
-  email: example@domain.com # change to your email address
+  name: Xhris54
+  email: xhrist54@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://twitter.com/krishnast54 # change to your Twitter homepage
+    - https://github.com/xhris54 # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
